:sparkles: Introduce MethodInvoker API for TestExecutionListeners